# braas-ai-pipeline

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
braas/: __init__.py
braas/api/: __init__.py  main.py
braas/api/routes/: __init__.py  equipment.py  experiments.py  inventory.py
braas/config/: __init__.py  settings.py
braas/core/: __init__.py  enums.py  events.py  exceptions.py  models.py
braas/dashboard/: __init__.py  main.py  templates.py
braas/discovery/: __init__.py  docking.py  engine.py  generator.py  lead_optimizer.py  models.py  target.py
braas/knowledge/: __init__.py  graph.py  sarcopenia_research.py  target_profile.py
braas/models/: registry.py
braas/pipeline/: __init__.py
braas/pipeline/analysis/: __init__.py  interpreter.py  processor.py  visualizer.py
braas/pipeline/execution/: __init__.py  orchestrator.py  robot_drivers.py
braas/pipeline/intake/: __init__.py  nlp_engine.py  recommender.py
braas/pipeline/learning/: __init__.py  continuous.py
braas/pipeline/monitoring/: __init__.py  anomaly_detector.py  sensor_monitor.py
braas/pipeline/protocol_design/: doe_optimizer.py  generator.py
braas/robots/: controller.py
braas/utils/: __init__.py  helpers.py  logger.py  metrics.py
docs/: ARCHITECTURE.md
outputs/: discovery_report_myostatin_sarcopenia.md  drug_candidates_myostatin_sarcopenia.json
scripts/: discover_drug.py  run_api.py  run_pipeline.py
tests/integration/: test_pipeline.py
tests/unit/: test_analysis.py  test_nlp_engine.py  test_protocol_generator.py  test_scheduler.py
(+9 files in other folders)
